--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -132,7 +132,7 @@
             });
         }
 
-        function displayTable(containerId, rows, scores = []) {
+        function displayTable(containerId, rows) {
             const boldText = [
                 'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 
                 'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final', 
@@ -140,19 +140,14 @@
             ];
 
             let tableHTML = '<table>';
-            rows.forEach((row, rowIndex) => {
+            rows.forEach(row => {
                 tableHTML += '<tr>';
-                row.forEach((cell, cellIndex) => {
+                row.forEach(cell => {
                     const cellContent = cell.trim();
                     const flagImg = flags[cellContent] ? `<img src="${flags[cellContent]}" class="flag"> ` : '';
                     const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
                     tableHTML += `<td class="${cellClass}">${flagImg}${cellContent}</td>`;
                 });
-                if (scores.length > 0 && rowIndex > 0) {
-                    scores[rowIndex - 1].forEach(score => {
-                        tableHTML += `<td>${score}</td>`;
-                    });
-                }
                 tableHTML += '</tr>';
             });
             tableHTML += '</table>';
@@ -169,14 +164,9 @@
             }
         }
 
-        // Load actual results and scores on page load
+        // Load actual results on page load
         window.onload = function() {
-            loadCSV('./results_csv/Actual_Results.csv', rows => {
-                loadCSV('./results_csv/Scores.csv', scoreRows => {
-                    const scores = scoreRows.slice(1).map(row => row.slice(5)); // Skip header and extract scores
-                    displayTable('actualResults', rows, scores);
-                });
-            });
+            loadCSV('./results_csv/Actual_Results.csv', rows => displayTable('actualResults', rows));
 
             fetch('./jsons/participants.json')
                 .then(response => response.json())
