--- a/update_scores.html
+++ b/update_scores.html
@@ -102,7 +102,8 @@
                     participantCSV += `${date},${team1},${team2},${participantScore}\n`;
                 }
 
-                downloadCSV(participantCSV, `${participant.name}_scores.csv`);
+                const participantNameForFilename = participant.name.replace(/ /g, '_');
+                downloadCSV(participantCSV, `${participantNameForFilename}_scores.csv`);
             }
         }
 
